Lexer tests added, fixed token and lexer bugs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,9 @@ project(TreeProgrammingLanguage C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(TreeProgrammingLanguage main.c
-        core/token.h)
+        core/token.h
+        core/lexer.c
+        core/lexer.h
+        core/token.c
+        core/lexer_tests.c
+        core/lexer_tests.h)
