Added identifier logic, not complete yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,6 @@ add_executable(TreeProgrammingLanguage main.c
         core/lexer.h
         core/token.c
         core/lexer_tests.c
-        core/lexer_tests.h)
+        core/lexer_tests.h
+        core/utilities.c
+        core/utilities.h)
